[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analog_tools_sebastian_merz"
version = "0.0.1"
authors = [
  { name="Sebastian Merz", email="author@example.com" },
]
description = "Package for cleaning up time based analog data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"